# unit-test-workshop-for-streamlit

./: .gitignore  README.md  pyproject.toml
src/session1/: discounter.py
src/session2/: error_raiser.py  season_selector.py
src/session3/: api.py
src/session4/: README.md  main.py
tests/session1/: test_disconter.py
tests/session2/: test_error_raiser.py  test_season_selector.py
tests/session3/: test_api.py
